--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>header</header>
+    <main>main</main>
+    <aside>aside</aside>
+    <footer>footer</footer>
+  </body>
 </html>
